fix: wrong market time validation (#42)
* fix: invalid opened/closed market time

* feat remove moment-timezone

* feat: change moment-timezone to moment

* fix: news card unnecessary grow

* fix: convert native date to moment

* fix: scrollbar too big

* refactor: remove unneccessary printing

* fix: wrong date validation

--- a/src/pages/styles/custom.css
+++ b/src/pages/styles/custom.css
@@ -42,18 +42,20 @@ img {
 /* Custom scrollbar */
 
 ::-webkit-scrollbar {
-  width: 1.55rem;
+  width: 0.75rem;
 }
 
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 10px 10px rgba(255, 255, 255, 0.4);
-  border: solid 0.5rem transparent;
+  border-left: solid 0.25rem transparent;
+  border-right: solid 0.25rem transparent;
   border-radius: 24px;
 }
 
 ::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 10px 10px rgba(75, 75, 75, 0.8);
-  border: solid 0.6rem transparent;
+  box-shadow: inset 0 0 10px 10px rgba(68, 68, 68, 0.9);
+  border-left: solid 0.25rem transparent;
+  border-right: solid 0.25rem transparent;
   border-radius: 24px;
 }
 
